Add configure of gd

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,7 @@ jobs:
       - run: mkdir -p build/logs
       - run: sudo apt-get update -y -qq
       - run: sudo apt-get install -y -qq libfreetype6-dev libpng-dev libjpeg-dev
+      - run: sudo docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/
       - run: sudo docker-php-ext-install gd
       - run: composer install -n --prefer-dist
 
