--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
       - run: sudo docker-php-ext-install gd
 
       # ImageMagick install
-      - run: sudo apt-get install -y -qq imagemagick
+      - run: sudo apt-get install -y -qq imagemagick libmagickwand-dev
       - run: yes | sudo pecl install -f imagick
       - run: sudo docker-php-ext-enable imagick
 
